--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.5
 
 dev_dependencies:
   flutter_test:
